# qiju

./: .gitignore  CHANGELOG.md  INSTALL_AND_AGENT_INIT.md  LICENSE  NOTICE  README.md  README.zh.md  RELEASE.md  install.sh  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: docs-confusion.md  host-integration.md  install-failure.md
.github/workflows/: ci.yml
adapters/: claude_code.sh
agents/claude/: CLAUDE.kedu.md
agents/codex/: AGENTS.kedu.md
agents/cursor/rules/: kedu.mdc
agents/kiro/agents/: kedu.json
agents/kiro/hooks/: kedu-clean-exit.kiro.hook
agents/kiro/prompts/: kedu-agent-prompt.md
agents/kiro/steering/: kedu.md
ci/: run_ci.py
config/: redaction_rules.json
docs/: architecture.md  cli-reference.md  host-integration.md  redaction-and-privacy.md
hooks/: session_end_log.sh
launchd/: org.kedu.maintain.plist  org.qiju.maintain.plist
packaging/pypi/: README.md  approved_public_identifiers.txt  blocked_local_identifiers.txt  build.sh  credential_patterns.json  expected-sdist-files.txt  expected-wheel-files.txt  generate_expected.sh  publish.sh  scan.py  verify_artifact.sh
scripts/: __init__.py  allowlist.py  archive.py  block_format.py  capture.py  cleanup.py  id_gen.py  init_cmd.py  install_backstop.sh  kedu.py  maintain.py  migrate.py  paths.py  qiju.py  query_log.py  redact.py  retro_redact.py  schema.py  search.py  state.py  storage.py  util.py
scripts/config/: allowlist.json
skills/kedu/: SKILL.md
skills/kedu-log/: SKILL.md
skills/kedu-search/: SKILL.md
skills/qiju-log/: SKILL.md
skills/qiju-review/: SKILL.md
skills/qiju-search/: SKILL.md
src/qiju/: __init__.py  allowlist.py  archive.py  capture.py  cleanup.py  cli.py  id_gen.py  init_cmd.py  maintain.py  migrate.py  paths.py  redact.py  register.py  retro_redact.py  schema.py  search.py  staging.py  storage.py  update_cmd.py  util.py
src/qiju/config/: redaction_rules.json
tests/: conftest.py  smoke_cross_platform.py  test_agent_path_contracts.py  test_capture.py  test_cleanup.py  test_cli.py  test_init.py  test_install.py  test_maintain.py  test_migrate.py  test_redact.py  test_register.py  test_schema.py  test_search.py  test_staging.py  test_state.py  test_update.py  test_util_portability.py
